# checked-literals

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-and-test.py  cabal.project  checked-literals.cabal  deploy.py  flake.nix  fourmolu.yaml  ghc-versions.json  install-all-ghcs.py  safe-literals.cabal
.github/workflows/: ci.yml
src/: SafeLiterals.hs
src-extra/Data/Ratio/: Extra.hs
src-nums/CheckedLiterals/Nums/: Fixed.hs  Signed.hs  Unsigned.hs
src-nums/SafeLiterals/Nums/: Fixed.hs  Signed.hs  Unsigned.hs
src/CheckedLiterals/: Plugin.hs
src/CheckedLiterals/Class/: Integer.hs  Rational.hs
src/SafeLiterals/: Class.hs  Plugin.hs
src/SafeLiterals/Class/: Integer.hs  Rational.hs  TemplateHaskell.hs
src/SafeLiterals/Class/Rational/: TypeNats.hs
tests/: Main.hs  Tests.hs
tests/Test/Tasty/: AssertGhc.hs  ShouldError.hs
tests/Tests/: Common.hs  Integer.hs  Rational.hs  RequiredTypeArguments.hs  Unsigned.hs  Word.hs
tests/Tests/Integer/: Fixed.hs  Int.hs  Polymorphic.hs  Signed.hs  Unsigned.hs  Word.hs
tests/Tests/Rational/: Fixed.hs  Polymorphic.hs  Ratio.hs
